[package]
name = "ruxos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde", "tracing"]

[dependencies]
serde = { version = "1.0.183", default-features = false, features = ["derive"], optional = true }
tracing = { version = "0.1.37", features = ["async-await"], optional = true }
tokio = { version = "1.32.0", default-features = false, features = ["time", "sync"] }
petgraph = "0.6.4"
atomic-waker = "1.1.1"
itertools = "0.11"

rand = { version = "0.8.5", features = ["small_rng"] }

[dev-dependencies]
maelstrom_api = { path = "../maelstrom_api" }

rand = { version = "0.8.5", features = ["small_rng"] }
serde = "1.0.183"
serde_json = "1.0.105"
tokio = { version = "1.31.0", default-features = false, features = ["rt", "macros", "signal"] }
tracing = { version = "0.1.37", features = ["async-await"] }
tracing-subscriber = "0.3.17"
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
tracing-opentelemetry = { version = "0.21" }
opentelemetry-otlp = { version = "0.13" }
