[package]
name = "unique-ids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ruxos = { path = "../../" }
aufruhr = { path = "../../../aufruhr/" }
rand = "0.8.5"
tokio = { version = "1.32.0", default-features = false, features = ["rt"] }
indicatif = "0.17.6"
svg = "0.13.1"
